feat: implementing the classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,25 @@
+# src/main/resources/application.properties
 spring.application.name=personal-blog
+spring.profiles.active=local
 
-# Datasource
+# src/main/resources/application-local.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/blogdb
-spring.datasource.username=blog_user
-spring.datasource.password=blog_pass
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=kleber
+spring.datasource.password=123456
+spring.datasource.hikari.maximum-pool-size=10
 
-# JPA / Hibernate
+# CORS (adjust as needed)
+app.cors.allowed-origins=http://localhost:3000
+
+
+
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Jackson
-spring.jackson.time-zone=America/Sao_Paulo
+# JSON date format
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
 
-# Server
-server.port=8080
-
-# JWT custom properties
-app.jwt.secret=${JWT_SECRET:your-secret-key-change-in-production}
-app.jwt.expiration=86400000
 
