--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,31 @@
+// build.gradle
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '4.0.1'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version '3.3.2'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
-group = 'org.example'
+group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-description = 'personal-blog'
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
+sourceCompatibility = '21'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    // 🌐 Spring MVC (REST controllers)
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
-    // 🗄️ Spring Data JPA (Hibernate ORM)
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    // 🔐 Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    runtimeOnly 'org.postgresql:postgresql:42.7.3'
 
-    // 🐘 PostgreSQL Driver
-    runtimeOnly 'org.postgresql:postgresql'
-
-    // 🧪 Testing
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-
-    // Lombok
+    // Optional: Lombok can reduce boilerplate
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    // anotações de validação
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
