--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// build.gradle
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.2'
@@ -7,7 +6,12 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '21'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 repositories {
     mavenCentral()
@@ -20,7 +24,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     runtimeOnly 'org.postgresql:postgresql:42.7.3'
 
-    // Optional: Lombok can reduce boilerplate
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
