--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=personal-blog
 spring.profiles.active=local
 
 # src/main/resources/application-local.properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/blogdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog_db
 spring.datasource.username=kleber
 spring.datasource.password=123456
 spring.datasource.hikari.maximum-pool-size=10
