--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,10 @@
-# src/main/resources/application.properties
 spring.application.name=personal-blog
-spring.profiles.active=local
 
-# src/main/resources/application-local.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/blog_db
 spring.datasource.username=kleber
 spring.datasource.password=123456
-spring.datasource.hikari.maximum-pool-size=10
 
-# CORS (adjust as needed)
-app.cors.allowed-origins=http://localhost:3000
+spring.jpa.hibernate.ddl-auto=create
 
-
-
-# JPA
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# JSON date format
-spring.mvc.format.date=yyyy-MM-dd
-spring.mvc.format.date-time=yyyy-MM-dd'T'HH:mm:ss
-
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
