--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql:42.7.3'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
 }
 
 tasks.named('test') {
