feat:  add spring security

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // Spring Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // Validação (DTOs)
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 
 
 }
