--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     // Validação (DTOs)
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // JWT (JJWT)
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 
 
 }
